<resources>
    <string name="app_name">AR친구랑 </string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="friend_notification_channel_id">friend_notification_channel_id</string>
    <string name="place">아바타 출현</string>
    <string name="bgmPlay">BGM 재생</string>
    <string name="bgmPause">BGM 정지</string>
    <string name="goToFriend">친구 보러가기</string>
    <string name="title_activity_login">loginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="ID">아이디</string>
    <string name="pleasesetid">아이디를 입력해주세요.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="findFriend">친구 검색</string>
    <string name="pleaseinputfriendname">친구이름을 입력하세요</string>
    <string name="findfriend">친구검색</string>
    <string name="chinchoo">친추</string>
    <string name="changeAvatar">아바타 바꾸기</string>
    <string name="hulk">헐크</string>
    <string name="setavatar">아바타 설정</string>
    <string name="avatarname">아바타 이름</string>
    <string name="ok">설정</string>
    <string name="test">테스트</string>
    <string name="batman">베트맨</string>
    <string name="madandroid">안드로이드</string>
    <string name="minihome">미니홈피</string>
    <string name="conversation">대화</string>
    <string name="wnatfriendlist">친구목록보기</string>
    <string name="send">전송</string>
    <string name="title_activity_test">testActivity</string>
    <string name="title_activity_fcmchat">FCMChatActivity</string>
    <string name="hiroid">안녕로이드</string>
    <string name="insectroid">곤충로이드</string>
    <string name="deletenull">계정 삭제하기</string>
</resources>