<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.company.ChangeAvatar.ChangeAvatarActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <io.github.sceneview.ar.ArSceneView
        android:id="@+id/sceneView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideLine2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hulkTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideLine2"
        app:layout_constraintEnd_toEndOf="@id/verticalGuideLine1"
        android:text="@string/hiroid"
        android:textSize="23sp"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:layout_marginBottom="2dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/hulkTestTextView"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hulkTextView"
        app:layout_constraintEnd_toEndOf="@id/verticalGuideLine1"
        android:text="@string/test"
        android:textSize="30sp"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/hulkSetTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/hulkTestTextView"
        app:layout_constraintEnd_toEndOf="@id/verticalGuideLine1"
        android:text="@string/ok"
        android:textSize="30sp"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/batmanTextView"
        app:layout_constraintStart_toEndOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideLine2"
        app:layout_constraintEnd_toEndOf="@id/verticalGuideLine2"
        android:text="@string/insectroid"
        android:textSize="23sp"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:layout_marginBottom="2dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/batmanTestTextView"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toBottomOf="@id/batmanTextView"
        app:layout_constraintEnd_toEndOf="@id/verticalGuideLine2"
        android:text="@string/test"
        android:textSize="30sp"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/batmanSetTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/ok"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@id/verticalGuideLine2"
        app:layout_constraintStart_toEndOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toBottomOf="@id/batmanTestTextView" />



    <TextView
        android:id="@+id/madAndroidTextView"
        app:layout_constraintStart_toEndOf="@+id/verticalGuideLine2"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideLine2"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/madandroid"
        android:textSize="23sp"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:layout_marginBottom="2dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/madAndroidTestTextView"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/verticalGuideLine2"
        app:layout_constraintTop_toBottomOf="@id/madAndroidTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/test"
        android:textSize="30sp"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/madAndroidSetTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/ok"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/verticalGuideLine2"
        app:layout_constraintTop_toBottomOf="@id/madAndroidTestTextView" />






</androidx.constraintlayout.widget.ConstraintLayout>